--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="icon" href="imagen/libros.png" type="image/jpeg">
         <title>Sistema de Almacenamiento de Libros</title>
         <link rel="stylesheet" href="css/login.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         
     </head>
     <body>
@@ -15,9 +16,9 @@
                     <label class="formtlo">Datos para Iniciar Sesión</label>
                     <p>
                     <label for="name" class="ub1">&#128273; Ingresar Usuario</label>
-                    <input type="text" name="nombre" id="nombre" placeholder="Nombre Usuario" autofocus autocomplete required>
+                    <input type="text" name="usuario" id="nombre" placeholder="Nombre Usuario" autofocus autocomplete required>
                     <label for="passwd" class="ub1">&#128274; Ingresa Contraseña</label>
-				    <input type="password" name="passwd" id="passwd" placeholder="*****"  required>
+				    <input type="password" name="contra" id="passwd" placeholder="*****"  required>
                     <section class="botonesA">
                         <input type="submit" value="Ingresar">
                         <input type="reset" value="Cancelar">
